Users: Change password

--- a/SmartEcoA/ClientApp/src/assets/locale/en.json
+++ b/SmartEcoA/ClientApp/src/assets/locale/en.json
@@ -2,5 +2,9 @@
   "Paginator": {
     "ItemsPerPage": "Items per page:"
   },
-  "AreYouSureDeleteThisRecord": "Are you sure to delete this record?"
+  "AreYouSureDeleteThisRecord": "Are you sure to delete this record?",
+  "Users": {
+    "PasswordChanged": "Password changed!",
+    "NewUserRegistered": "New user registered"
+  }
 }
