--- a/SmartEcoA/ClientApp/src/assets/locale/kk.json
+++ b/SmartEcoA/ClientApp/src/assets/locale/kk.json
@@ -2,5 +2,9 @@
   "Paginator": {
     "ItemsPerPage": "Бір беттегі элементтер:"
   },
-  "AreYouSureDeleteThisRecord": "Сіз бұл жазбаны өшіресіз бе??"
+  "AreYouSureDeleteThisRecord": "Сіз бұл жазбаны өшіресіз бе??",
+  "Users": {
+    "PasswordChanged": "Пароль өзгертілді!",
+    "NewUserRegistered": "Жаңа қолданушы тіркелді"
+  }
 }
