--- a/SmartEcoA/ClientApp/src/assets/locale/ru.json
+++ b/SmartEcoA/ClientApp/src/assets/locale/ru.json
@@ -2,5 +2,9 @@
   "Paginator": {
     "ItemsPerPage": "Элементов на странице:"
   },
-  "AreYouSureDeleteThisRecord": "Вы уверены, что хотите удалить эту запись?"
+  "AreYouSureDeleteThisRecord": "Вы уверены, что хотите удалить эту запись?",
+  "Users": {
+    "PasswordChanged": "Пароль изменён!",
+    "NewUserRegistered": "Новый пользователь зарегистрирован"
+  }
 }
